Added Tourist homepage. Moved methods from Project.cs to TourReservation

--- a/InitialProject/InitialProject/InitialProject.csproj
+++ b/InitialProject/InitialProject/InitialProject.csproj
@@ -33,4 +33,11 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="View\Guest\" />
+    <Folder Include="View\Guide\" />
+    <Folder Include="View\Owner\" />
+    <Folder Include="View\Tourist\" />
+  </ItemGroup>
+
 </Project>
