--- a/InitialProject/InitialProject/InitialProject.csproj
+++ b/InitialProject/InitialProject/InitialProject.csproj
@@ -26,6 +26,8 @@
     <None Remove="Resources\Images\tour_picture1.jpg" />
     <None Remove="Resources\Images\tour_picture2.jpg" />
     <None Remove="Resources\Images\view.png" />
+    <None Remove="View\accommodation.jpg" />
+    <None Remove="View\logo.jpg" />
     <None Remove="View\trophy.jpg" />
   </ItemGroup>
 
@@ -55,7 +57,11 @@
     <Resource Include="Resources\Images\tour_picture.jpg" />
     <Resource Include="Resources\Images\tour_picture1.jpg" />
     <Resource Include="Resources\Images\tour_picture2.jpg" />
-    <Resource Include="View\trophy.jpg" />
+    <Resource Include="Resources\Images\logo.jpg" />
+    <Resource Include="Resources\Images\trophy.jpg" />
+    <Resource Include="View\Guest\accommodation.jpg" />
+    <Resource Include="View\Guest\logo.jpg" />
+    <Resource Include="View\Guest\trophy.jpg" />
   </ItemGroup>
 
   <ItemGroup>
