--- a/InitialProject/InitialProjectTests/InitialProjectTests.csproj
+++ b/InitialProject/InitialProjectTests/InitialProjectTests.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+
+    <OutputType>WinExe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
